fix(Header): improve gutter alignment with content

--- a/react/Header/Header.less
+++ b/react/Header/Header.less
@@ -24,7 +24,7 @@
   justify-content: space-between;
   align-items: center;
   flex: 1 0 auto;
-  padding: 0 (@grid-gutter-width / 2);
+  padding: 0 @grid-gutter-width;
   max-width: @grid-container-width + @grid-gutter-width;
   .smallDeviceOnly({
     height: (@grid-row-height * 7);
@@ -38,6 +38,7 @@
   }
   @media only screen and (min-width: (@grid-container-width)) { //IE11 flexbox horizontal centering
     flex: 0 0 @grid-container-width;
+    padding: 0;
   }
 }
 
@@ -51,7 +52,7 @@
     order: 0;
     flex: 0 1 100%;
     justify-content: center;
-    padding: 0 (@grid-gutter-width / 2);
+    padding: 0 @grid-gutter-width;
   });
 }
 
@@ -88,7 +89,7 @@
 
 .logoSvg {
   height: 39px;
-  width: 105px;
+  width: 99px;
   .aboveSmallDevice({
     height: 51px;
     width: 129px;
